--- a/.github/workflows/Build MT3000.yml
+++ b/.github/workflows/Build MT3000.yml
@@ -95,7 +95,8 @@ jobs:
       - name: Install feeds
         run: |
           cd $OPENWRT_ROOT_PATH 
-          sed -i '$a src-git NueXini_Packages https://github.com/NueXini/NueXini_Packages.git' feeds.conf.default
+          sed -i '$a src-git kenzo https://github.com/kenzok8/openwrt-packages' feeds.conf.default
+          sed -i '$a src-git small https://github.com/kenzok8/small' feeds.conf.default
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
