--- a/config/immortalwrt/MT3000/.config
+++ b/config/immortalwrt/MT3000/.config
@@ -5156,8 +5156,8 @@ CONFIG_POSTFIX_PCRE=y
 # Applications
 #
 CONFIG_PACKAGE_8021xd=y
-CONFIG_PACKAGE_datconf=y
-CONFIG_PACKAGE_datconf-lua=y
+#CONFIG_PACKAGE_datconf
+#CONFIG_PACKAGE_datconf-lua=y
 # CONFIG_PACKAGE_mii_mgr is not set
 # CONFIG_PACKAGE_mtkhqos_util is not set
 # CONFIG_PACKAGE_regs is not set
